condensed to 346 batches