@@ -67,10 +67,10 @@ public class Distance3DDemo implements Application<BigDecimal, ProtocolBuilderNu
             DRes<SReal> cosLambdaB = (id == 2)
                     ? numericIo.input(Math.cos(lambda), 2) : numericIo.input(0.0, 2);
 
-            Pair<Pair<DRes<SReal>, DRes<SReal>>, Pair<List<DRes<SReal>>, List<DRes<SReal>>>> inputs = new Pair<>(new Pair<>(sinThetaA, sinThetaB), new Pair<>(Arrays.asList(
-                    cosThetaA, sinLambdaA, cosLambdaA), Arrays.asList(
-                    cosThetaB, sinLambdaB, cosLambdaB
-            )));
+            Pair<Pair<DRes<SReal>, DRes<SReal>>, Pair<Pair<DRes<SReal>, DRes<SReal>>, Pair<List<DRes<SReal>>, List<DRes<SReal>>>>> inputs = new Pair<>(new Pair<>(sinThetaA, sinThetaB), new Pair<>(new Pair<>(cosThetaA, cosThetaB), new Pair<>(Arrays.asList(
+                    sinLambdaA, cosLambdaA), Arrays.asList(
+                    sinLambdaB, cosLambdaB
+            ))));
 
             return () -> inputs;
         }).pairInPar(
@@ -78,15 +78,11 @@ public class Distance3DDemo implements Application<BigDecimal, ProtocolBuilderNu
                 (seq, inputs) -> seq.realNumeric().mult(inputs.getFirst().getFirst(), inputs.getFirst().getSecond()),
                 (seq, inputs) -> seq.par(par -> inputs::getSecond).pairInPar(
                         // cos(thetaA) * cos(thetaB)
-                        (seq2, inputSecond) -> seq2.realNumeric().mult(inputSecond.getFirst().get(0), inputSecond.getSecond().get(0)),
-                        (seq2, inputSecond) -> {
-                            RealNumeric numeric = seq2.realNumeric();
-                            // rewritten form of cos(lambdaB - lambdaA)
-                            return numeric.add(
-                                    numeric.mult(inputSecond.getFirst().get(1), inputSecond.getSecond().get(1)),
-                                    numeric.mult(inputSecond.getFirst().get(2), inputSecond.getSecond().get(2))
-                            );
-                        }
+                        (seq2, inputSecond) -> seq2.realNumeric().mult(inputSecond.getFirst().getFirst(), inputSecond.getFirst().getSecond()),
+                        (seq2, inputSecond) -> seq2.par(par -> inputSecond::getSecond).pairInPar(
+                                (builder, inputSecond2) -> builder.realNumeric().mult(inputSecond2.getFirst().get(0), inputSecond2.getSecond().get(0)),
+                                (builder, inputSecond2) -> builder.realNumeric().mult(inputSecond2.getFirst().get(1), inputSecond2.getSecond().get(1))
+                        ).seq((seq3, input) -> seq3.realNumeric().add(input.getFirst(), input.getSecond()))
                 ).seq((seq2, factors) -> seq2.realNumeric().mult(factors.getFirst(), factors.getSecond()))
         ).seq((seq, input) -> seq.realNumeric().add(input.getFirst(), input.getSecond()))
                 .seq((seq, input) -> seq.realNumeric().open(input));
